<resources>
    <string name="app_name">GetMovieX</string>
    <string name="add_movie">Add movie</string>
    <string name="delete_all">Delete All</string>
    <string name="exit">Exit</string>
    <string name="add_from_inter">Add movie from internet</string>
    <string name="subject">Subject:</string>
    <string name="name">name</string>
    <string name="body">Description</string>
    <string name="url">URL</string>
    <string name="url_">URL:</string>
    <string name="show">show</string>
    <string name="cancel">cancel</string>
    <string name="search">Search</string>
    <string name="next_page">next page</string>
    <string name="prev_page">previous page</string>
    <string name="enter_name">Please Enter Movie Name</string>
    <string name="downloading">Downloading</string>
    <string name="wait">please wait...</string>
    <string name="failed_picture">Failed to load picture</string>
    <string name="edit_delete">Edit Or Delete?</string>
    <string name="do_you_want_edit_delete">do you want to edit or delete this Movie</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="canceled">Canceled</string>
    <string name="yes">Yes</string>
    <string name="sure">Are you sure?</string>
    <string name="cant_undo">you can\'t undo this</string>
    <string name="no_more_pages">no more pages</string>
    <string name="saw">saw</string>

</resources>
