<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.getmoviex.AddMovieActivity">

        <RelativeLayout
            android:id="@+id/relLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            >

            <LinearLayout
                android:id="@+id/lin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">


                <EditText

                    android:id="@+id/movieNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/add_text_size"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lin1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/AddMovieTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:gravity="center"
                    android:text="@string/body"
                    android:textSize="@dimen/add_text_size" />

                <EditText
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:id="@+id/addMovieEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bodyHeight"
                    android:textSize="@dimen/body_size"
                    android:hint="@string/body"
                    android:inputType="textMultiLine"
                    android:gravity="top|left"
                    android:background="@drawable/body_view"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin3"
                android:layout_below="@id/lin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/url"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/add_text_size"
                    android:textColor="@color/white"
                android:textColorHint="@color/white"/>

                <Button
                    android:background="@drawable/button"
                    android:id="@+id/btnShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:text="@string/show"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/lin3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageURL"
                    android:layout_width="150dp"
                    android:layout_height="225dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/ic_launcher_background" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="2">

                    <Button
                        android:id="@+id/btnOk"
                        style="@style/ButtonStyle"
                        android:layout_weight="1"
                        android:text="@android:string/ok"
                        />

                    <Button
                        android:id="@+id/btnCancel"
                        style="@style/ButtonStyle"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="1"
                        android:text="@string/cancel" />
                        </LinearLayout>
                </LinearLayout>
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
